--- a/public/cliente/crearCliente.html
+++ b/public/cliente/crearCliente.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Registro de Cliente - Préstamos Rápidos</title>
+  <title>Registro de Cliente</title>
   <!-- Bootstrap 5 CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Bootstrap 5 JS -->
@@ -65,6 +65,13 @@
                   <input type="tel" class="form-control" id="telefono" name="telefono" placeholder="ejm. 965 123 456" pattern="[0-9]{3}[0-9]{3}[0-9]{3}" required>
                 </div>
               </div>
+
+              <!-- Dirección -->
+
+              <div class="col-md-12 mb-3">
+                  <label for="direccion" class="form-label">Dirección <span class="text-danger">*</span></label>
+                  <input type="text" class="form-control" id="direccion" name="direccion" required>
+                </div>
 
               <!-- Género -->
               <div class="mb-3">
