--- a/public/cliente/crearCliente.html
+++ b/public/cliente/crearCliente.html
@@ -12,7 +12,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
   <style>
     body {
-      background-color: #f8f9fa;
+      background-color: #dad9d8;
     }
     .card {
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
@@ -29,7 +29,7 @@
         <div class="card border-primary">
           <div class="card-header bg-primary text-white text-center">
             <h4 class="mb-0"><i class="bi bi-person-plus"></i> Registro de Nuevo Cliente</h4>
-            <small class="d-block">Empresa de Préstamos</small>
+            <small class="d-block">Empresa de Préstamos Los Senatinos</small>
           </div>
           <div class="card-body p-4">
             <form action="insertar-cliente" method="POST" id="formCliente" autocomplete="off">
