--- a/public/pagos/insertarPago.html
+++ b/public/pagos/insertarPago.html
@@ -3,9 +3,98 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Insertar Pago</title>
+  <title>Registro de Pago</title>
+  <!-- Bootstrap 5 CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap 5 JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Iconos de Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+  <style>
+    body {
+      background-color: #dad9d8;
+    }
+    .card {
+      box-shadow: 0 4px 12px rgba(214, 18, 18, 0.1);
+    }
+    .form-label {
+      font-weight: 500;
+    }
+  </style>
 </head>
 <body>
+  <div class="container mt-5">
+    <div class="row justify-content-center">
+      <div class="col-lg-6 col-md-8">
+        <div class="card border-primary">
+          <div class="card-header bg-primary text-white text-center">
+            <h4 class="mb-0"><i class="bi bi-piggy-bank-fill"></i> Registro de Nuevo Pago </h4>
+            <small class="d-block">Empresa de Préstamos Los senatinos</small>
+          </div>
+          <div class="card-body p-4">
+            <form action="insertar-cliente" method="POST" id="formPago" autocomplete="off">
+              <div class="row">
+                <!-- Monto Amortizado-->
+                <div class="col-md-6">
+                <label for="amortizado" class="form-label required">Monto Amortizado(S/)<span class="text-danger">*</span></label>
+                  <div class="input-group">
+                  <span class="input-group-text">S/</span>
+                  <input type="number" class="form-control" id="amortizado" name="amortizado" required>
+                  </div>
+                  </div>
+
+                <!-- Fecha de pago -->
+                <div class="col-md-6 mb-3">
+                  <label for="fechaPago" class="form-label">Fecha de Pago <span class="text-danger">*</span></label>
+                  <input type="text" class="form-control" id="fechaPago" name="fechaPago" required>
+
+                </div>
+              </div>
+
+              <div class="row">
+                <!-- Saldo Pendiente -->
+                 <div class="col-md-6">
+                <label for="saldoPendiente" class="form-label required">Saldo Pendiente(S/)<span class="text-danger">*</span></label>
+                  <div class="input-group">
+                  <span class="input-group-text">S/</span>
+                  <input type="number" class="form-control" id="saldoPendiente" name="saldoPendiente" required>
+                  </div>
+                  </div>
+
+                <!-- Metodo de pago -->
+                <div class="col-md-6 mb-3">
+                  <label for="metodoPago" class="form-label">Metodo de pago <span class="text-danger">*</span></label>
+                  <input type="tel" class="form-control" id="metodoPago" name="metodoPago" required>
+                </div>
+              </div>
+
+              <!-- Comprobante de pago -->
+
+              <div class="mb-4">
+              <label for="notas" class="form-label">Insertar Comprobante de pago <small class="text-muted"></small></label>
+              <input type="file" class="form-control">
+              <textarea class="form-control" id="comprobante" name="notas" rows="3" 
+              placeholder="El archivo se cargará aqui"></textarea>
+              </div>
+
+              <!-- Botones -->
+              <div class="d-flex gap-2 d-md-flex justify-content-md-end">
+                <button type="reset" class="btn btn-danger me-md-2">
+                  <i class="bi bi-arrow-counterclockwise"></i>Limpiar
+                </button>
+                <button type="submit" class="btn btn-success">
+                  <i class="bi bi-check-circle"></i> Registrar Pago
+                </button>
+              </div>
+            </form>
+          </div>
   
+        </div>
+      </div>
+    </div>
+  </div>
+
+  
+ 
 </body>
 </html>
